// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Tooltip rtl render component should be rendered correctly in RTL direction 1`] = `<span />`;

exports[`Tooltip should hide when mouse leave antd disabled component Button 1`] = `
<button
  class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
  disabled=""
  type="button"
/>
`;

exports[`Tooltip should hide when mouse leave antd disabled component Switch 1`] = `
<button
  aria-checked="false"
  class="ant-switch css-var-root ant-switch-disabled"
  disabled=""
  role="switch"
  type="button"
>
  <div
    class="ant-switch-handle"
  />
  <span
    class="ant-switch-inner"
  >
    <span
      class="ant-switch-inner-checked"
    />
    <span
      class="ant-switch-inner-unchecked"
    />
  </span>
</button>
`;

exports[`Tooltip support arrow props by default 1`] = `
<div>
  <div
    aria-describedby="test-id"
    class="target ant-tooltip-open"
  >
    target
  </div>
  <div
    class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-css-var css-var-root ant-tooltip-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="ant-tooltip-arrow"
      style="position: absolute; bottom: 0px; left: 0px;"
    >
      <span
        class="ant-tooltip-arrow-content"
      />
    </div>
    <div
      class="ant-tooltip-container"
      id="test-id"
      role="tooltip"
    />
  </div>
</div>
`;

exports[`Tooltip support arrow props pass false to hide arrow 1`] = `
<div>
  <div
    aria-describedby="test-id"
    class="target ant-tooltip-open"
  >
    target
  </div>
  <div
    class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-css-var css-var-root ant-tooltip-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="ant-tooltip-container"
      id="test-id"
      role="tooltip"
    />
  </div>
</div>
`;
